Fix wz-text-truncatable and app buttons

--- a/SplunkAppForWazuh/appserver/static/css/styles/common.css
+++ b/SplunkAppForWazuh/appserver/static/css/styles/common.css
@@ -965,7 +965,7 @@ md-toast {
   padding-right: 10px;
 }
 
-.wz-text-truncatable {
+.wz-text-truncatable-ellipsis {
   white-space: nowrap;
   overflow: hidden;
   max-width: 1px;
